--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.12.1",
     "dompurify": "^3.1.7",
+    "mathjs": "^14.7.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
